feat: add remote demo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
+    <div id="mesBnt">send message to main process</div>
+    <div id="mesBackBnt">none message</div>
+
     <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
+    <script src="./renderer.js">
+    </script>
   </body>
 </html>
